# cbmroot

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  CbmRoot_test.cmake  Dart.sh  README.md  autoinstall_framework.sh
KF/: CMakeLists.txt  CbmKF.cxx  CbmKFParticleFinder.cxx  CbmKFParticleFinder.h  CbmKFParticleFinderPID.cxx  CbmKFParticleFinderPID.h  CbmKFParticleFinderQA.cxx  CbmKFParticleFinderQA.h  CbmKFParticleInterface.cxx  CbmKFParticleInterface.h  (+1 more)
analysis/: AnalysisLinkDef.h  CMakeLists.txt
analysis/conversion/: CbmAnaConversion.cxx  CbmAnaConversion.h  CbmAnaConversionKF.cxx  CbmAnaConversionKF.h  CbmAnaConversionPhotons.cxx  CbmAnaConversionPhotons.h  CbmAnaConversionReco.cxx  CbmAnaConversionReco.h  CbmAnaConversionRecoFull.cxx  CbmAnaConversionRecoFull.h  CbmAnaConversionRich.cxx  CbmAnaConversionRich.h  CbmAnaConversionTomography.cxx  CbmAnaConversionTomography.h
analysis/dielectron/: CbmAnaDielectronStudyReportAll.cxx  CbmAnaDielectronStudyReportAll.h  CbmAnaDielectronTask.cxx  CbmAnaDielectronTask.h  CbmAnaDielectronTaskDraw.cxx  CbmAnaDielectronTaskDraw.h  CbmAnaDielectronTaskDrawAll.cxx  CbmAnaDielectronTaskDrawAll.h  CbmAnaLmvmDrawStudy.cxx  CbmAnaLmvmDrawStudy.h  CbmLmvmCandidate.h  CbmLmvmCuts.h  CbmLmvmHadd.cxx  CbmLmvmHadd.h  CbmLmvmHist.cxx  CbmLmvmHist.h  CbmLmvmKinematicParams.h  CbmLmvmUtils.h
analysis/flow/: CbmAnaFlow.cxx  CbmAnaFlow.h  eventPlane.cxx  eventPlane.h
analysis/jpsiana/: CbmAnaJpsiCandidate.h  CbmAnaJpsiCuts.h  CbmAnaJpsiHist.cxx  CbmAnaJpsiHist.h  CbmAnaJpsiKinematicParams.h  CbmAnaJpsiReport.cxx  CbmAnaJpsiReport.h  CbmAnaJpsiTask.cxx  CbmAnaJpsiTask.h  CbmAnaJpsiUtils.h
analysis/papa/: AnalysisCuts.cxx  AnalysisCuts.h  AnalysisFilter.cxx  AnalysisFilter.h  AnalysisTaskMultiPairAnalysis.cxx  AnalysisTaskMultiPairAnalysis.h  CMakeLists.txt  PairAnalysis.cxx  PairAnalysis.h  PairAnalysisCutGroup.cxx  PairAnalysisCutGroup.h  PairAnalysisCutQA.cxx  PairAnalysisCutQA.h  PairAnalysisEvent.cxx  PairAnalysisEvent.h  PairAnalysisHF.cxx  PairAnalysisHF.h  PairAnalysisHelper.cxx  PairAnalysisHelper.h  PairAnalysisHistos.cxx  PairAnalysisHistos.h  PairAnalysisMC.cxx  PairAnalysisMC.h  PairAnalysisPair.cxx  PairAnalysisPair.h  PairAnalysisPairKF.cxx  PairAnalysisPairKF.h  PairAnalysisPairLV.cxx  PairAnalysisPairLV.h  PairAnalysisPairLegCuts.cxx  PairAnalysisPairLegCuts.h  PairAnalysisSignalMC.cxx  PairAnalysisSignalMC.h  PairAnalysisStyler.cxx  PairAnalysisStyler.h  PairAnalysisTrack.cxx  PairAnalysisTrack.h  PairAnalysisTrackRotator.cxx  PairAnalysisTrackRotator.h  PairAnalysisVarCuts.cxx  (+6 more)
analysis/papa/configs/: ConfigTemplate_user_task.C
fles/: Build_Fles_Ipc.cmake  Build_Flib_Dpb.cmake  Build_Spadic_Message.cmake  CMakeLists.txt
fles/ctrl/: CMakeLists.txt
fles/ctrl/control/: CMakeLists.txt
fles/ctrl/control/cliclient/: CMakeLists.txt
fles/ctrl/control/cliserver/: CMakeLists.txt
fles/ctrl/control/libclient/: CMakeLists.txt  ClientLinkDef.h
fles/ctrl/control/libserver/: CMakeLists.txt
fles/ctrl/libutil/: CMakeLists.txt
fles/flib_dpb/: CMakeLists.txt  MicrosliceContents.cpp  MicrosliceContents.hpp
fles/get4_ctrl/: config_get4v1x.cxx  defines_get4v1x.h  defines_roc_get4v1x.h  rootlogon.C
fles/nxyter_ctrl/: config_hodo.cxx  defines_gpio.h  defines_spi.h  rootlogon.C
fles/reader/: CMakeLists.txt  CbmBeamDefaults.h  CbmDaqBuffer.cxx  CbmDaqBuffer.h  CbmFiberHodoMapping.cxx  CbmFiberHodoMapping.h  CbmFlibFileSource.cxx  CbmFlibFileSource.h  CbmFlibFileSourceNew.cxx  CbmFlibFileSourceNew.h  CbmNxFlibFileSource.cxx  CbmNxFlibFileSource.h  FlibReaderLinkDef.h
fles/reader/tasks/: CbmTrdEveOnlineDisplay.cxx  CbmTrdEveOnlineDisplay.h  CbmTrdOnlineDisplay.cxx  CbmTrdOnlineDisplay.h  CbmTrdRawBeamProfile.cxx  CbmTrdRawBeamProfile.h
fles/reader/unpacker/: CbmGet4v1xDef.h  CbmGet4v1xHackDef.cxx  CbmGet4v1xHackDef.h  CbmGet4v1xToolsDef.cxx  CbmGet4v1xToolsDef.h  CbmTSUnpack.cxx  CbmTSUnpack.h  CbmTSUnpackDummy.cxx  CbmTSUnpackDummy.h  CbmTSUnpackFiberHodo.cxx  CbmTSUnpackFiberHodo.h  CbmTSUnpackGet4v1x.cxx  CbmTSUnpackGet4v1x.h  CbmTSUnpackNxyter.cxx  CbmTSUnpackNxyter.h  CbmTSUnpackSpadic.cxx  CbmTSUnpackSpadic.h  CbmTSUnpackStsxyter.cxx  CbmTSUnpackStsxyter.h  CbmTSUnpackTrb.cxx  CbmTSUnpackTrb.h  TimesliceReader.cpp  TimesliceReader.hpp
fles/scv3/: CMakeLists.txt  cbmnet_registers.h  dump_cnet_rf.cpp  scv3_rf.cpp
fles/softdpb/: Application.cpp  Application.hpp  CMakeLists.txt  MicrosliceFilter.hpp  Parameters.cpp  Parameters.hpp  TransparentFilter.cpp  TransparentFilter.hpp
fles/spadic/message/: message.c  message.h  message_reader.c  message_reader.h
fles/spadic/message/constants/: hit_types.inc  info_types.inc  stop_types.inc
fles/spadic/message/doc/: .gitignore  Doxyfile  SConstruct  demo.c  doxy_custom.css  mainpage.md
fles/spadic/message/test/: .gitignore  SConstruct  message_wrap.py  reader_wrap.py  test_message.py  test_reader.py
fles/spadic/message/wrap/cpp/: Message.cpp  Message.hpp
fles/spadic/message/wrap/cpp/demo/: .gitignore  SConstruct  demo.cpp
fles/trb/: CMakeLists.txt
fles/trb/daq_anal/: CMakeLists.txt  evt.c  evt.h  hadtu.c  hadtu.h  hldread.c  hldread.h  showevt.c  subevt.c  subevt.h
fles/trb/trbnet_client/: Application.cpp  CMakeLists.txt  Parameters.cpp  Parameters.hpp  TrbBridge.cpp  TrbBridge.hpp  TrbBridgeFrame.cpp  TrbBridgeStatistics.cpp  TrbBridgeStatistics.hpp  TrbBridgeTransaction.cpp  TrbBridgeTransaction.hpp  TrbBridgeTrbNetHeaders.cpp  main.cpp
fles/trb/trbnet_exe/: Application.cpp  Application.hpp  CMakeLists.txt  Parameters.cpp  Parameters.hpp
fles/trb/trbnet_lib/: CMakeLists.txt  TrbBridge.cpp  TrbBridge.hpp  TrbBridgeFrame.cpp  TrbBridgeFrame.hpp  TrbBridgeStatistics.cpp  TrbBridgeStatistics.hpp  TrbBridgeTransaction.cpp  TrbBridgeTransaction.hpp  TrbBridgeTrbNetHeaders.hpp
fles/tsclient/: CMakeLists.txt  Parameters.cpp
macro/run/: CMakeLists.txt  checkFieldMap.C  checkFieldSym.C  checkFields.C  check_overlaps.C  eventDisplay.C  run_digi.C  run_qa.C  run_reco.C  run_reco_flow.C  run_reco_new.C  run_sim.C  run_sim_flow.C  run_test.sh
(+1159 files in other folders)
